simple/middle/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
  labels:
    app: middle
    app.kubernetes.io/component: middle
    app.kubernetes.io/instance: middle
    app.kubernetes.io/name: middle
    app.kubernetes.io/part-of: middle
  name: middle
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: middle
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: middle
        deployment: middle
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/gotest/smgoapp:latest
        imagePullPolicy: Always
        name: middle
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
